--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 ---
 {% for x in site.pages %}
-    <a href="{{x.url}}">{{x.title}}<a>
+    <a href="{{site.baseurl}}{{x.url}}">{{x.title}}<a>
 {% endfor %}
